@@ -17,4 +17,10 @@
 		<module>deployment</module>
 		<module>sci2</module>
 	</modules>
+	
+	<properties>
+		<tychoVersion>0.18.1</tychoVersion>
+		<memoryOptions1>-Xms512m -Xmx1024m -XX:PermSize=256m</memoryOptions1>
+		<memoryOptions2>-XX:MaxPermSize=256m</memoryOptions2>
+	</properties>
 </project>
